force-app/main/default/objects/Order/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <formula>IMAGE(&quot;https://toolbank.my.site.com/agency/resource/1663178134000/AccountBalance&quot;, &quot;red&quot;, 30,148)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_________</label>
    <type>Text</type>
</CustomField>