force-app/main/default/objects/Order/fields/Actual_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup_Date_Time__c</fullName>
    <label>Actual Pickup Date/Time</label>
    <type>DateTime</type>
</CustomField>