force-app/main/default/objects/Order/fields/Actual_Pickup_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup_Quarter__c</fullName>
    <formula>CASE(
  MONTH(  DATEVALUE( Actual_Pickup_Date_Time__c ) ),
  1, &quot;Q1&quot;,
  2, &quot;Q1&quot;,
  3, &quot;Q1&quot;,
  4, &quot;Q2&quot;,
  5, &quot;Q2&quot;,
  6, &quot;Q2&quot;,
  7, &quot;Q3&quot;,
  8, &quot;Q3&quot;,
  9, &quot;Q3&quot;,
    &quot;Q4&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Pickup Quarter</label>
    <type>Text</type>
</CustomField>