force-app/main/default/objects/Order/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliate Orders</relationshipLabel>
    <relationshipName>AffiliateOrders</relationshipName>
    <type>Lookup</type>
</CustomField>