force-app/main/default/objects/Order/fields/Affiliate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Phone__c</fullName>
    <formula>Affiliate__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliate Phone</label>
    <type>Text</type>
</CustomField>