force-app/main/default/objects/Order/fields/Agency_Contact_Merge__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Merge__c</fullName>
    <description>Agency Contact for email merge fields</description>
    <formula>BillToContact.FirstName&amp;&quot; &quot;&amp; BillToContact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Contact Merge</label>
    <type>Text</type>
</CustomField>