force-app/main/default/objects/Order/fields/Agency_Name_Merge__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_Merge__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name Merge</label>
    <type>Text</type>
</CustomField>