force-app/main/default/objects/Order/fields/Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed__c</fullName>
    <formula>Total_Amount__c - Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>