force-app/main/default/objects/Order/fields/Areas_Of_Impact__c.field-meta.xml
<CustomField>
    <fullName>Areas_Of_Impact__c</fullName>
    <label>Areas Of Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Welfare</fullName>
            </value>
            <value>
                <fullName>Arts, Culture, Humanities</fullName>
            </value>
            <value>
                <fullName>Community Revitalization</fullName>
            </value>
            <value>
                <fullName>Disaster Relief and Recovery</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment and Greenspace</fullName>
            </value>
            <value>
                <fullName>Faith Based</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing and Homelessness</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>Veteran Services</fullName>
            </value>
            <value>
                <fullName>Youth and Children</fullName>
            </value>
            <value>
                <fullName>Public Societal Benefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>