force-app/main/default/objects/Order/fields/Available_Credits__c.field-meta.xml
<CustomField>
    <fullName>Available_Credits__c</fullName>
    <formula>Account.Available_Credits_R__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>