force-app/main/default/objects/Order/fields/Cleaning_Fees__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cleaning Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>