force-app/main/default/objects/Order/fields/Contact_Email_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Legacy__c</fullName>
    <label>Contact Email Legacy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>