force-app/main/default/objects/Order/fields/Contact_Name_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Legacy__c</fullName>
    <label>Contact Name Legacy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>