force-app/main/default/objects/Order/fields/Contact_Phone_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Legacy__c</fullName>
    <label>Contact Phone Legacy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>