force-app/main/default/objects/Order/fields/Corporation_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name__c</fullName>
    <label>Corporation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>