force-app/main/default/objects/Order/fields/Created_Date_Original__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Original__c</fullName>
    <label>Created Date Original</label>
    <length>30</length>
    <type>Text</type>
</CustomField>