force-app/main/default/objects/Order/fields/curEmail__c.field-meta.xml
<CustomField>
    <fullName>curEmail__c</fullName>
    <label>curEmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>