force-app/main/default/objects/Order/fields/Dataloader__c.field-meta.xml
<CustomField>
    <fullName>Dataloader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dataloader</label>
    <type>Checkbox</type>
</CustomField>