force-app/main/default/objects/Order/fields/Days_till_Overdue_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Overdue_Email__c</fullName>
    <formula>Overdue_Send_Email_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Overdue Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>