force-app/main/default/objects/Order/fields/Days_to_Return__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Return__c</fullName>
    <formula>EndDate -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>