force-app/main/default/objects/Order/fields/Delivery_Info__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Info__c</fullName>
    <label>Delivery Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>