force-app/main/default/objects/Order/fields/Desired_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Pickup_Date__c</fullName>
    <label>Desired Pickup Date</label>
    <type>Date</type>
</CustomField>