force-app/main/default/objects/Order/fields/Disaster_Name__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Name__c</fullName>
    <label>Disaster Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disaster_Name</valueSetName>
    </valueSet>
</CustomField>