force-app/main/default/objects/Order/fields/Earliest_scheduled_return_date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_scheduled_return_date__c</fullName>
    <label>Earliest scheduled return date</label>
    <summarizedField>OrderItem.Schedule_Return_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Type__c</field>
        <operation>equals</operation>
        <value>Tool</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>