force-app/main/default/objects/Order/fields/Error_Log_field__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_field__c</fullName>
    <label>Error Log field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>