force-app/main/default/objects/Order/fields/Extend_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Extend_Appointment__c</fullName>
    <label>Extend Appointment Legacy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>