force-app/main/default/objects/Order/fields/Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested__c</fullName>
    <label>Extension Requested Legacy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>