force-app/main/default/objects/Order/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Price</label>
    <type>Checkbox</type>
</CustomField>