force-app/main/default/objects/Order/fields/Hours_Average_Volunteer_is_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Hours_Average_Volunteer_is_on_Site__c</fullName>
    <inlineHelpText>Number of hours average volunteer is on site.</inlineHelpText>
    <label># Hours Average Volunteer is on Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>