force-app/main/default/objects/Order/fields/If_Yes_How_Many_Homes__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_How_Many_Homes__c</fullName>
    <label>If Yes, How Many Homes?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>