force-app/main/default/objects/Order/fields/Initial_Fees__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fees__c</fullName>
    <label>Initial Fees_LFNt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>