force-app/main/default/objects/Order/fields/Lfnt_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Lfnt_Order_Number__c</fullName>
    <description>This field helps to capture the Lfnt order number, Actually, they asked to merge salesforce order number and lfnt order number since it is not possible . We have created this field. (This field is field while data migration)</description>
    <label>Lfnt Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>