force-app/main/default/objects/Order/fields/Lost_R_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lost_R_Fee__c</fullName>
    <label>Lost Fee</label>
    <summarizedField>OrderItem.Lost_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Lost__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>