force-app/main/default/objects/Order/fields/Member_Agency_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Agency_Status__c</fullName>
    <formula>IF(( Account.Flagged__c = TRUE), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), 
IF(ISPICKVAL( Account.Membership_Status__c , &apos;Expired&apos;),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RED = Flagged; YELLOW = Expired; GREEN = Active</inlineHelpText>
    <label>Member Agency Status</label>
    <type>Text</type>
</CustomField>