force-app/main/default/objects/Order/fields/Membership_R_Fee__c.field-meta.xml
<CustomField>
    <fullName>Membership_R_Fee__c</fullName>
    <label>Membership Fee</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Type__c</field>
        <operation>equals</operation>
        <value>Additional Charges</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Category__c</field>
        <operation>equals</operation>
        <value>Membership</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>