force-app/main/default/objects/Order/fields/Number_Of_Projects__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Projects__c</fullName>
    <inlineHelpText>Number of individual activities serving the public good by using these ToolBank tools.</inlineHelpText>
    <label>Number Of Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>