force-app/main/default/objects/Order/fields/Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers__c</fullName>
    <inlineHelpText>Number of people using ToolBank tools.</inlineHelpText>
    <label>Number of Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>