force-app/main/default/objects/Order/fields/Order_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Close_Date__c</fullName>
    <label>Order Close Date</label>
    <type>Date</type>
</CustomField>