force-app/main/default/objects/Order/fields/Order_Fulfill_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfill_Date__c</fullName>
    <label>Order Fulfill Date</label>
    <type>DateTime</type>
</CustomField>