force-app/main/default/objects/Order/fields/Order_Org_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Org_Email__c</fullName>
    <description>Field is required to correctly populate Order emails</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Org Email</label>
    <type>Text</type>
</CustomField>