force-app/main/default/objects/Order/fields/Order_Paid__c.field-meta.xml
<CustomField>
    <fullName>Order_Paid__c</fullName>
    <label>Order Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>