force-app/main/default/objects/Order/fields/Order_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Order_Scheduler__c</fullName>
    <formula>HYPERLINK(&quot;Affiliate__r.Scheduler_Link_Email__c&quot;, &quot;visiting our scheduling page&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Scheduler</label>
    <type>Text</type>
</CustomField>