force-app/main/default/objects/Order/fields/OrderID_LFNT_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>OrderID_LFNT_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>OrderID_Dataload</label>
    <length>50</length>
    <type>Text</type>
</CustomField>