force-app/main/default/objects/Order/fields/OrderId_Orginal__c.field-meta.xml
<CustomField>
    <fullName>OrderId_Orginal__c</fullName>
    <label>OrderId_Orginal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>