force-app/main/default/objects/Order/fields/Other_R__c.field-meta.xml
<CustomField>
    <fullName>Other_R__c</fullName>
    <label>Other</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Type__c</field>
        <operation>equals</operation>
        <value>Additional Charges</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Category__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>