force-app/main/default/objects/Order/fields/Overdue_Send_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Send_Email_Date__c</fullName>
    <description>This field is used to send an overdue email every 7 days.</description>
    <label>Overdue Send Email Date</label>
    <type>Date</type>
</CustomField>