force-app/main/default/objects/Order/fields/People_Directly_Served__c.field-meta.xml
<CustomField>
    <fullName>People_Directly_Served__c</fullName>
    <inlineHelpText>Number of people directly served by project.</inlineHelpText>
    <label>People Directly Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>