force-app/main/default/objects/Order/fields/People_Indirectly_Impacted__c.field-meta.xml
<CustomField>
    <fullName>People_Indirectly_Impacted__c</fullName>
    <inlineHelpText>Number of people estimated to be indirectly impacted within the next year.</inlineHelpText>
    <label>People Indirectly Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>