force-app/main/default/objects/Order/fields/Pickup_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Approved__c</fullName>
    <label>Pickup Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_Not_Yet</valueSetName>
    </valueSet>
</CustomField>