force-app/main/default/objects/Order/fields/Pickup_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Delivery_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Delivery Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pickup_Delivery_Location__c.Affiliate__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Affiliate__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pickup_Delivery_Location__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>