force-app/main/default/objects/Order/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community / Neighborhood Cleanup</fullName>
            </value>
            <value>
                <fullName>Demolition/Clearing</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery/Response</fullName>
            </value>
            <value>
                <fullName>Environment Conservation</fullName>
            </value>
            <value>
                <fullName>Landscaping/Beautification</fullName>
            </value>
            <value>
                <fullName>Planting/Groundskeeping</fullName>
            </value>
            <value>
                <fullName>Repairs/Maintenance/Renovation/Additions</fullName>
            </value>
            <value>
                <fullName>Special Events/Fundraisers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>