force-app/main/default/objects/Order/fields/Project_Venue__c.field-meta.xml
<CustomField>
    <fullName>Project_Venue__c</fullName>
    <label>Project Venue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Facility</fullName>
            </value>
            <value>
                <fullName>Public Space or Venue</fullName>
            </value>
            <value>
                <fullName>Residence or Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>