force-app/main/default/objects/Order/fields/Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Cost__c</fullName>
    <label>Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>