force-app/main/default/objects/Order/fields/Requested_Borrowing_Period__c.field-meta.xml
<CustomField>
    <fullName>Requested_Borrowing_Period__c</fullName>
    <label>Requested Borrowing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>5 weeks</fullName>
            </value>
            <value>
                <fullName>6 weeks</fullName>
            </value>
            <value>
                <fullName>7 weeks</fullName>
            </value>
            <value>
                <fullName>8 weeks</fullName>
            </value>
            <value>
                <fullName>9 weeks</fullName>
            </value>
            <value>
                <fullName>10 weeks</fullName>
            </value>
            <value>
                <fullName>11 weeks</fullName>
            </value>
            <value>
                <fullName>12 weeks</fullName>
            </value>
            <value>
                <fullName>13 weeks</fullName>
            </value>
            <value>
                <fullName>14 weeks</fullName>
            </value>
            <value>
                <fullName>15 weeks</fullName>
            </value>
            <value>
                <fullName>16 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>