force-app/main/default/objects/Order/fields/Schedule_PickUp_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Schedule_PickUp_Date_F__c</fullName>
    <formula>EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule PickUp Date</label>
    <type>Date</type>
</CustomField>