force-app/main/default/objects/Order/fields/Scheduled_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Pickup_Time__c</fullName>
    <label>Scheduled Pickup Time</label>
    <type>Time</type>
</CustomField>