force-app/main/default/objects/Order/fields/Serving_50_of_Low_Income_People__c.field-meta.xml
<CustomField>
    <fullName>Serving_50_of_Low_Income_People__c</fullName>
    <label>Serving &lt; 50% of Low Income People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Project(s) are being completed in an area considered to be low-income.</fullName>
            </value>
            <value>
                <fullName>All Project(s) are being completed in an area(s) considered to be low-income to moderate-income.</fullName>
            </value>
            <value>
                <fullName>None of the above.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>