force-app/main/default/objects/Order/fields/Signed_PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_PDF_Name__c</fullName>
    <formula>&quot;Signed_Payment_Receipt_&quot; &amp; TEXT(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed PDF Name</label>
    <type>Text</type>
</CustomField>