force-app/main/default/objects/Order/fields/Staff_on_this_Project__c.field-meta.xml
<CustomField>
    <fullName>Staff_on_this_Project__c</fullName>
    <inlineHelpText>Number of people estimated to be indirectly impacted within the next year.</inlineHelpText>
    <label>Staff on this Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>