force-app/main/default/objects/Order/fields/Tools_Picked_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Tools_Picked_Up_By__c</fullName>
    <label>Tools Picked Up By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>