force-app/main/default/objects/Order/fields/Tools_Returned_By__c.field-meta.xml
<CustomField>
    <fullName>Tools_Returned_By__c</fullName>
    <label>Tools Returned By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>