force-app/main/default/objects/Order/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>Cleaning_R__c + Deposit_R__c + Total_Handling_Fees__c + Other_R__c + Total_Late_Fee__c+ Delivery_R_Fee__c + Membership_R_Fee__c+ Lost_R_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>