force-app/main/default/objects/Order/fields/Total_Handling_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Handling_Fees__c</fullName>
    <label>Total Handling Fees</label>
    <summarizedField>OrderItem.Total_Handling_Fee__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>