force-app/main/default/objects/Order/fields/Total_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Late_Fee__c</fullName>
    <label>Total Late Fee</label>
    <summarizedField>OrderItem.Late_Fee__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>